trying to build all microservices using parent gradle file

--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,12 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+task bootRunAll(type: GradleBuild) {
+    tasks = [
+            ':Microservices:AuthenticationService:bootRun',
+            ':Microservices:BookingMakingService:bootRun',
+            ':Microservices:CalenderManagementService:bootRun',
+            ':Microservices:TourManagementService:bootRun',
+            ':Microservices:UserManagementService:bootRun'
+    ]
+}
