--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -1,17 +1,12 @@
 plugins {
+	id 'org.springframework.boot'
+	id 'io.spring.dependency-management'
 	id 'java'
-	id 'org.springframework.boot' version '3.3.4'
-	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
-	}
-}
+version = '1.0.0-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -19,10 +14,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Assuming you need a database
+	runtimeOnly 'com.h2database:h2' // Example database, can be replaced by another
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
