builds all the gradle files

--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,36 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.4'
-	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.springframework.boot' version '3.1.0' apply false
+	id 'io.spring.dependency-management' version '1.1.0' apply false
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+allprojects {
+	group = 'com.example'
+	version = '1.0.0-SNAPSHOT'
 
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
+	repositories {
+		mavenCentral()
 	}
 }
 
-repositories {
-	mavenCentral()
-}
+subprojects {
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'java'
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		runtimeOnly 'com.h2database:h2'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	}
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
-task bootRunAll(type: GradleBuild) {
-    tasks = [
-            ':Microservices:AuthenticationService:bootRun',
-            ':Microservices:BookingMakingService:bootRun',
-            ':Microservices:CalenderManagementService:bootRun',
-            ':Microservices:TourManagementService:bootRun',
-            ':Microservices:UserManagementService:bootRun'
-    ]
+	java {
+		sourceCompatibility = JavaVersion.VERSION_17
+		targetCompatibility = JavaVersion.VERSION_17
+	}
+
+	test {
+		useJUnitPlatform()
+	}
 }
