--- a/Microservices/UserManagementService/build.gradle
+++ b/Microservices/UserManagementService/build.gradle
@@ -1,24 +1,36 @@
 plugins {
-	id 'org.springframework.boot'
-	id 'io.spring.dependency-management'
 	id 'java'
+	id 'org.springframework.boot' version '3.1.0' apply false
+	id 'io.spring.dependency-management' version '1.1.0' apply false
 }
 
-group = 'com.example'
-version = '1.0.0-SNAPSHOT'
-sourceCompatibility = '17'
-
-repositories {
-	mavenCentral()
+allprojects {
+	group = 'com.example.microservices'
+	version = '0.0.1-SNAPSHOT'
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
 
-test {
-	useJUnitPlatform()
+	repositories {
+		mavenCentral()
+	}
+
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	}
+	tasks.bootJar {
+		mainClassName = 'com.example.UserManagementService.UserManagementServiceApplication'
+	}
+
+
+	test {
+		useJUnitPlatform()
+	}
 }
