--- a/Microservices/CalendarManagementService/build.gradle
+++ b/Microservices/CalendarManagementService/build.gradle
@@ -1,35 +1,27 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.0' apply false
-	id 'io.spring.dependency-management' version '1.1.0' apply false
+	id 'org.springframework.boot' version '3.1.0'
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-allprojects {
-	group = 'com.example.microservices'
-	version = '0.0.1-SNAPSHOT'
+group = 'com.example.microservices'
+version = '0.0.1-SNAPSHOT'
+
+repositories {
+	mavenCentral()
 }
 
-subprojects {
-	apply plugin: 'java'
-	apply plugin: 'org.springframework.boot'
-	apply plugin: 'io.spring.dependency-management'
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
 
-	repositories {
-		mavenCentral()
-	}
+tasks.bootJar {
+	mainClass = 'com.example.CalendarManagementService.CalendarManagementServiceApplication'
+}
 
-	dependencies {
-		implementation 'org.springframework.boot:spring-boot-starter'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		implementation 'org.springframework.boot:spring-boot-starter-web'
-		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	}
-
-	tasks.bootJar {
-		mainClassName = 'com.example.BookingMakingService.BookingMakingServiceApplication'
-	}
-
-	test {
-		useJUnitPlatform()
-	}
+test {
+	useJUnitPlatform()
 }
