--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -21,7 +21,8 @@ subprojects {
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		implementation 'org.springframework.boot:spring-boot-starter-security'
+		// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+		implementation 'org.springframework.boot:spring-boot-starter-security:3.3.5'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	}
