--- a/Microservices/BookingMakingService/build.gradle
+++ b/Microservices/BookingMakingService/build.gradle
@@ -23,6 +23,8 @@ subprojects {
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework:spring-webflux:5.2.7.RELEASE'
+
 	}
 
 	tasks.bootJar {
