--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -1,7 +1,5 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.0' apply false
-	id 'io.spring.dependency-management' version '1.1.0' apply false
 }
 
 allprojects {
@@ -20,16 +18,18 @@ subprojects {
 
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-		implementation 'org.springframework.boot:spring-boot-starter-security:3.3.5'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'mysql:mysql-connector-java:8.0.32'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	}
 
-	tasks.bootJar {
-		mainClassName = 'src.main.java.com.example.AuthenticationService.AuthenticationServiceApplication'
+
+	tasks.named('bootJar') {
+		mainClassName = 'java.com.example.AuthenticationService.AuthenticationServiceApplication'
 	}
+
 
 	test {
 		useJUnitPlatform()
