--- a/Microservices/TourManagementService/build.gradle
+++ b/Microservices/TourManagementService/build.gradle
@@ -23,6 +23,7 @@ subprojects {
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	}
 	tasks.bootJar {
 		mainClassName = 'com.example.TourManagementService.TourManagementServiceApplication'
