--- a/Microservices/UserManagementService/src/main/resources/application.properties
+++ b/Microservices/UserManagementService/src/main/resources/application.properties
@@ -1,2 +1,16 @@
+# Application Name
 spring.application.name=demo
+
+# Server Port
 server.port=8085
+
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# JPA and Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
