--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ subprojects {
 		implementation 'mysql:mysql-connector-java'
 		implementation 'mysql:mysql-connector-java:8.0.32'  // Keep only one instance
 
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // For JSON processing
 	}
 
 	java {
