--- a/Microservices/UserManagementService/src/main/resources/application.properties
+++ b/Microservices/UserManagementService/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.datasource.password=1234
 # JPA and Hibernate Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
