--- a/Microservices/BookingMakingService/src/main/resources/application.properties
+++ b/Microservices/BookingMakingService/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=demo
 server.port=8082
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/Booking
+spring.datasource.username=root
+#spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://mysql:3306/AuthServiceDB
+spring.datasource.password=1234
