--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		runtimeOnly 'com.h2database:h2'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		implementation 'mysql:mysql-connector-java:8.0.32'
 	}
 
 	java {
