--- a/Microservices/UserManagementService/src/main/resources/application.properties
+++ b/Microservices/UserManagementService/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=demo
 server.port=8085
 
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/user_management
+spring.datasource.url=jdbc:mysql://localhost:3306/usermanagementdb
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 
 # JPA and Hibernate Settings
 spring.jpa.hibernate.ddl-auto=update
