--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'mysql:mysql-connector-java:8.0.32'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		implementation 'mysql:mysql-connector-java:8.0.32' // Replace with the latest version
+
 
 		// JSON Web Token dependencies
 		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
