--- a/Microservices/UserManagementService/src/main/resources/application.properties
+++ b/Microservices/UserManagementService/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Enable Hibernate SQL logging
+logging.level.org.hibernate.SQL=DEBUG
+
+# Enable Hibernate binding parameter logging
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Enable Spring Data JPA logging
+logging.level.org.springframework.orm.jpa=DEBUG
+
