--- a/Microservices/TourManagementService/build.gradle
+++ b/Microservices/TourManagementService/build.gradle
@@ -24,11 +24,11 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+		testImplementation 'com.h2database:h2:2.1.214'
 	}
 	tasks.bootJar {
 		mainClassName = 'com.example.TourManagementService.TourManagementServiceApplication'
 	}
-
 	test {
 		useJUnitPlatform()
 	}
