--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'mysql:mysql-connector-java:8.0.32'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'com.h2database:h2'
 		implementation 'mysql:mysql-connector-java:8.0.32' // Replace with the latest version
 
 
