Dockerized all microservices and dbs also added eureka server

--- a/Microservices/AuthenticationService/Dockerfile
+++ b/Microservices/AuthenticationService/Dockerfile
@@ -1,8 +1,8 @@
-Base image
+#Base image
 FROM openjdk:23-jdk-slim
 
-Copy across build
+#Copy across build
 COPY build/libs/AuthenticationService-0.0.1-SNAPSHOT.jar app.jar
 
-Set entry point
+#Set entry point
 ENTRYPOINT [ "java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005", "-jar", "app.jar" ]
