--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -22,12 +22,13 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'mysql:mysql-connector-java:8.0.32'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		implementation 'org.springframework.boot:spring-boot-starter-test'
 
 		// JSON Web Token dependencies
 		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 		// Test dependencies
 //		testImplementation 'org.mockito:mockito-core:5.4.0'
