--- a/Microservices/BookingMakingService/src/main/resources/application.properties
+++ b/Microservices/BookingMakingService/src/main/resources/application.properties
@@ -1,2 +1,23 @@
-spring.application.name=demo
+# Server Port
 server.port=8082
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://EurekaServer:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Application Name
+spring.application.name=booking-making-service
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://booking-db:3306/BookingServiceDB
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate (JPA) Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
