--- a/Microservices/EurekaServer/build.gradle
+++ b/Microservices/EurekaServer/build.gradle
@@ -1,29 +1,38 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.6'
-	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.springframework.boot' version '3.1.0'
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com.example'
+group = 'com.example.microservices'
 version = '0.0.1-SNAPSHOT'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(23)
-	}
-}
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// Eureka Server
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+
+	// Spring Boot Starter for Web (Required for Eureka Server)
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// Test Dependencies
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+dependencyManagement {
+	imports {
+		// Spring Cloud BOM (Use the latest compatible version for Spring Boot 3.1.0)
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.4'
+	}
+}
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 tasks.named('test') {
