--- a/Microservices/UserManagementService/src/main/resources/application.properties
+++ b/Microservices/UserManagementService/src/main/resources/application.properties
@@ -1,26 +1,25 @@
-# Application Name
-spring.application.name=demo
-
 # Server Port
-server.port=8085
+server.port=8084
 
-# DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/usermanagementdb
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://EurekaServer:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Application Name
+spring.application.name=user-management-service
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://user-db:3306/UserManagementDB
 spring.datasource.username=root
-spring.datasource.password=
-
-# JPA and Hibernate Settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Enable Hibernate SQL logging
+# Hibernate (JPA) Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Logging
 logging.level.org.hibernate.SQL=DEBUG
 
-# Enable Hibernate binding parameter logging
-logging.level.org.hibernate.type.descriptor.sql=TRACE
-
-# Enable Spring Data JPA logging
-logging.level.org.springframework.orm.jpa=DEBUG
 
