--- a/Microservices/AuthenticationService/src/main/resources/application.properties
+++ b/Microservices/AuthenticationService/src/main/resources/application.properties
@@ -10,7 +10,7 @@ eureka.client.fetch-registry=true
 spring.application.name=authentication-service
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://AuthServiceDB:3306/AuthServiceDB
+spring.datasource.url=jdbc:mysql://auth-db:3306/AuthServiceDB
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
