--- a/Microservices/TourManagementService/src/main/resources/application.properties
+++ b/Microservices/TourManagementService/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.client.fetch-registry=true
 # Application Name
 spring.application.name=booking-making-service
 # Hibernate (JPA) Configuration
-
+spring.datasource.url=jdbc:mysql://tour-db:3306/TourManagementDB
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
