--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
   auth-service:
     image: auth-service
     container_name: AuthService
+    build:
+      context: ./Microservices/AuthenticationService
     env_file:
       - .env
     depends_on:
@@ -77,6 +79,8 @@ services:
   booking-service:
     image: booking-service
     container_name: BookingService
+    build:
+      context: ./Microservices/BookingMakingService
     depends_on:
       booking-db:
         condition: service_healthy
@@ -113,6 +117,8 @@ services:
   tour-management-service:
     image: tour-management-service:latest
     container_name: TourManagementService
+    build:
+      context: ./Microservices/TourManagementService
     depends_on:
       tour-db:
         condition: service_healthy
@@ -149,6 +155,8 @@ services:
   user-management-service:
     image: user-management-service
     container_name: UserManagementService
+    build:
+      context: ./Microservices/UserManagementService
     depends_on:
       user-db:
         condition: service_healthy
