All Microservices now connected to Eureka

--- a/Microservices/TourManagementService/src/main/resources/application.properties
+++ b/Microservices/TourManagementService/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8083
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://EurekaServer:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
