--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -34,6 +34,9 @@ subprojects {
 //		testImplementation 'org.mockito:mockito-core:5.4.0'
 //		testImplementation 'org.mockito:mockito-inline:5.4.0'
 //		testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
+
+		// SwaggerAPI
+		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
 	}
 
 
