--- a/Microservices/BookingMakingService/build.gradle
+++ b/Microservices/BookingMakingService/build.gradle
@@ -25,6 +25,9 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework:spring-webflux:5.2.7.RELEASE'
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+		// SwaggerAPI
+		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
 	}
 
 	tasks.bootJar {
