--- a/Microservices/AuthenticationService/src/main/resources/application.properties
+++ b/Microservices/AuthenticationService/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
+
+springdoc.swagger-ui.path=/swagger-ui
