--- a/Microservices/UserManagementService/src/main/resources/application.properties
+++ b/Microservices/UserManagementService/src/main/resources/application.properties
@@ -22,4 +22,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 
+springdoc.swagger-ui.path=/swagger-ui
+
+
 
