--- a/Microservices/TourManagementService/src/main/resources/application.properties
+++ b/Microservices/TourManagementService/src/main/resources/application.properties
@@ -20,5 +20,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 
+springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui
 
