Fix for Swagger API

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ subprojects {
 
 		//SwaggerAPI
 		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
+		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
 	}
 
 	java {
