--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -20,6 +20,7 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter'
 		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'mysql:mysql-connector-java:8.0.32'
 		implementation 'org.springframework.boot:spring-boot-starter-test'
