--- a/Microservices/BookingMakingService/build.gradle
+++ b/Microservices/BookingMakingService/build.gradle
@@ -21,6 +21,7 @@ subprojects {
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework:spring-webflux:5.2.7.RELEASE'
