--- a/Microservices/TourManagementService/build.gradle
+++ b/Microservices/TourManagementService/build.gradle
@@ -21,6 +21,7 @@ subprojects {
 	dependencies {
 
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 		implementation 'org.springframework.boot:spring-boot-starter'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
