--- a/Microservices/TourManagementService/src/main/resources/application.properties
+++ b/Microservices/TourManagementService/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
+server.error.include-message=always
+server.error.include-stacktrace=always
+
