--- a/Microservices/BookingMakingService/src/main/resources/application.properties
+++ b/Microservices/BookingMakingService/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8082
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://eureka-server:8761/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
@@ -10,7 +10,7 @@ eureka.client.fetch-registry=true
 spring.application.name=booking-making-service
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://booking-db:3306/BookingServiceDB
+spring.datasource.url=jdbc:mysql://BookingServiceDB:3306/BookingServiceDB
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
