--- a/settings.gradle
+++ b/settings.gradle
@@ -4,11 +4,11 @@ include 'AuthenticationService'
 include 'BookingMakingService'
 include 'TourManagementService'
 include 'UserManagementService'
-include 'EurekaServer'
+//include 'EurekaServer'
 
 // Specify the correct paths for each microservice
 project(':AuthenticationService').projectDir = file('Microservices/AuthenticationService')
 project(':BookingMakingService').projectDir = file('Microservices/BookingMakingService')
 project(':TourManagementService').projectDir = file('Microservices/TourManagementService')
 project(':UserManagementService').projectDir = file('Microservices/UserManagementService')
-project(':EurekaServer').projectDir = file('Microservices/EurekaServer')
+//project(':EurekaServer').projectDir = file('Microservices/EurekaServer')
