--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -18,6 +18,7 @@ subprojects {
 
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'mysql:mysql-connector-java:8.0.32'
@@ -33,9 +34,6 @@ subprojects {
 //		testImplementation 'org.mockito:mockito-core:5.4.0'
 //		testImplementation 'org.mockito:mockito-inline:5.4.0'
 //		testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
-
-		// SwaggerAPI
-		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
 	}
 
 
