--- a/Microservices/AuthenticationService/src/main/resources/application.properties
+++ b/Microservices/AuthenticationService/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 # Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://eureka-server:8761/
+eureka.client.service-url.defaultZone=http://EurekaServer:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
@@ -21,6 +21,3 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
-
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.path=/swagger-ui
