Improved token logic

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ subprojects {
 	}
 
 	dependencies {
+
+		implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0' // For newer Jakarta Servlet API
+		implementation 'org.springframework.boot:spring-boot-starter-web'
 		// Spring Boot dependencies
 		implementation 'org.springframework.boot:spring-boot-starter'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
