--- a/Microservices/AuthenticationService/build.gradle
+++ b/Microservices/AuthenticationService/build.gradle
@@ -29,10 +29,12 @@ subprojects {
 		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
-		// Test dependencies
-//		testImplementation 'org.mockito:mockito-core:5.4.0'
-//		testImplementation 'org.mockito:mockito-inline:5.4.0'
-//		testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
+		implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0' // For newer Jakarta Servlet API
+		// Or for older javax.servlet API:
+		// implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
+		// Other dependencies
+		implementation 'org.springframework.boot:spring-boot-starter-web'
 
 		// SwaggerAPI
 		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
