--- a/Microservices/TourManagementService/src/main/resources/application.properties
+++ b/Microservices/TourManagementService/src/main/resources/application.properties
@@ -20,6 +20,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 
+management.endpoints.web.exposure.include=*
+management.endpoint.info.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.info.show-details=always
+
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui
 
