--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 
 		// Eureka Client for service discovery
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
@@ -53,6 +55,7 @@ subprojects {
 		//SwaggerAPI
 		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
 		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
 
 	}
 
