--- a/Microservices/TourManagementService/src/main/resources/application.properties
+++ b/Microservices/TourManagementService/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # Application Name
-spring.application.name=booking-making-service
+spring.application.name=tour-management-service
 # Hibernate (JPA) Configuration
 spring.datasource.url=jdbc:mysql://tour-db:3306/TourManagementDB
 spring.datasource.username=root
@@ -19,6 +19,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
+server.error.include-message=always
+server.error.include-stacktrace=always
+
 
 management.endpoints.web.exposure.include=*
 management.endpoint.info.enabled=true
