This commit shows the booking service pinging the tour management for all available tours.

--- a/Microservices/BookingMakingService/src/main/resources/application.properties
+++ b/Microservices/BookingMakingService/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 
+jwt.service.url=http://auth-service/auth/user
+tour-management-service.url=http://tour-management-service:8083
+
 
 management.endpoints.web.exposure.include=*
 management.endpoint.info.enabled=true
