--- a/Microservices/BookingMakingService/build.gradle
+++ b/Microservices/BookingMakingService/build.gradle
@@ -26,10 +26,17 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework:spring-webflux:5.2.7.RELEASE'
 		implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-
+		implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 		// SwaggerAPI
 		implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
 	}
+
+	dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4" 
+    }
+}
+
 
 	tasks.bootJar {
 		mainClassName = 'com.example.BookingMakingService.BookingMakingServiceApplication'
